preventing cart items overflow

--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -24,7 +24,7 @@
   right: 0;
   top: 0;
   box-shadow: 0px 0px 101px 55px rgba(222, 70, 37, 0.15);
-  
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -32,7 +32,9 @@
 
 .cartPaddings {
   padding: 0 4rem;
-  
+  //now cart items wont move the cart down
+  overflow: auto;
+  margin-bottom: 5rem;
 }
 
 .navBarCart {
@@ -144,7 +146,6 @@
 }
 
 .checkoutBlock {
-  margin-top: 5rem;
   border-top: 1px solid #d1ae9f;
   margin: 0 4rem;
 }
